--- a/Audit2/JSA/index.html
+++ b/Audit2/JSA/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <!-- <h1>Running...</h1> -->
-    <ol>
-      
-    </ol>
+    <ol></ol>
 
     <!-- <script src="./app.js"></script> -->
     <!-- <script src="./higher-order-function.js"></script> -->
@@ -24,6 +22,10 @@
     <!-- <script src="./interator_generator.js"></script> -->
     <!-- <script src="./sync_Async.js"></script> -->
     <!-- <script src="./timer.js"></script> -->
-    <script src="./xhr.js"></script>
+    <!-- <script src="./xhr.js"></script> -->
+    <!-- <script src="./promise.js"></script> -->
+    <!-- <script src="./async_await_theory.js"></script> -->
+    <!-- <script src="./async_await_practice.js"></script> -->
+    <script src="./local-storage.js"></script>
   </body>
 </html>
